--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,17 @@ body {
   }
 }
 
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1198.98px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -92,7 +103,26 @@ body {
 .header-container {
   margin: 0 auto;
 }
-.header__mobile {
+.header .logo {
+  display: block;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 1.17;
+}
+.header .logo__web {
+  color: var(--accent-color);
+}
+.header .logo__studio {
+  color: #000000;
+}
+.header .logo__white {
+  color: var(--white-text-color);
+}
+.header .header__mobile {
   position: fixed;
   top: 0;
   left: 0;
@@ -104,71 +134,41 @@ body {
   transition: transform 1000ms var(--cubic);
   z-index: 100;
 }
-.header__mobile.is-open {
+.header .header__mobile.is-open {
   transform: translateX(0);
 }
 @media screen and (min-width: 767.98px) {
-  .header__mobile {
+  .header .header__mobile {
     display: none;
   }
 }
-
-@media screen and (max-width: 767.98px) {
-  .header-desktop {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header-desktop {
-    display: flex;
-  }
-}
-
-.mobile-wrap {
+.header .mobile-wrap {
   display: flex;
   justify-content: space-between;
 }
-
-.header_overlay {
+.header .header_overlay {
+  overflow: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-
-.logo {
-  display: block;
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  font-size: 24px;
-  line-height: 1.17;
+.header .mob-nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
-.logo__web {
-  color: var(--accent-color);
-}
-.logo__studio {
-  color: #000000;
-}
-.logo__white {
-  color: var(--white-text-color);
-}
-.mobile-wrap {
+.header .mobile-wrap {
   align-items: center;
 }
 @media screen and (min-width: 768px) {
-  .mobile-wrap {
+  .header .mobile-wrap {
     display: none;
   }
 }
-
-.open_menu {
+.header .open_menu {
   margin-top: 10px;
-  padding-bottom: 10px;
-  right: 10px;
-  top: 10px;
+  margin-bottom: 10px;
   width: 40px;
   height: 40px;
   display: flex;
@@ -177,8 +177,7 @@ body {
   background-color: var(--nav-background-color);
   border: none;
 }
-
-.close_menu {
+.header .close_menu {
   position: absolute;
   top: 10px;
   right: 15px;
@@ -187,30 +186,27 @@ body {
   background-color: var(--nav-background-color);
   border: none;
 }
-
-.mob-nav__item {
+.header .mob-nav__item {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.18;
   text-align: left;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
   color: var(--main-text-color);
 }
-.mob-nav__item:last-child {
-  margin-bottom: 302px;
-}
-
-.mob-nav__link {
+.header .mob-nav__link {
   text-decoration: none;
   color: var(--main-text-color);
 }
-
-.mob-nav__link.active {
+.header .mob-nav__link.active {
   color: var(--accent-color);
 }
-
-.mob-contacts__item--tel {
+.header .contacts-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+.header .mob-contacts__item--tel {
   display: block;
   font-weight: 500;
   font-size: 34px;
@@ -218,10 +214,8 @@ body {
   letter-spacing: 0.02em;
   color: var(--accent-color);
   text-decoration: none;
-  margin-bottom: 32px;
 }
-
-.mob-contacts__item--mail {
+.header .mob-contacts__item--mail {
   display: block;
   font-style: normal;
   font-weight: 500;
@@ -230,16 +224,13 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   text-decoration: none;
-  margin-bottom: 64px;
 }
-
-.mobile_soc-links {
+.header .mobile_soc-links {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-
-.mobile_soc-link {
+.header .mobile_soc-link {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -248,7 +239,7 @@ body {
   color: var(--accent-color);
   text-decoration: none;
 }
-.mobile_soc-link::after {
+.header .mobile_soc-link::after {
   content: "";
   position: absolute;
   height: 22px;
@@ -257,27 +248,34 @@ body {
   margin-right: 10px;
   background-color: var(--secondary-text-color);
 }
-
+@media screen and (max-width: 767.98px) {
+  .header .header-desktop {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header .header-desktop {
+    display: flex;
+  }
+}
 @media screen and (min-width: 767.98px) {
-  .header-desktop {
+  .header .header-desktop {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
 @media screen and (min-width: 1198.98px) {
-  .header-desktop {
+  .header .header-desktop {
     width: 1200px;
   }
 }
-
-.navigation__list {
+.header .navigation__list {
   display: flex;
   gap: 50px;
 }
-
 @media screen and (min-width: 767.98px) {
-  .navigation__link {
+  .header .navigation__link {
     position: relative;
     display: block;
     padding-top: 32px;
@@ -293,13 +291,13 @@ body {
     transition-duration: var(--main-trans-duration);
     transition-timing-function: var(--cubic);
   }
-  .navigation__link:hover, .navigation__link:focus {
+  .header .navigation__link:hover, .header .navigation__link:focus {
     color: var(--accent-color);
   }
-  .navigation__link.active {
+  .header .navigation__link.active {
     color: var(--accent-color);
   }
-  .navigation__link.active::after {
+  .header .navigation__link.active::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -310,34 +308,32 @@ body {
     border-radius: 2px;
   }
 }
-
-.contacts {
+.header .contacts {
   display: block;
   align-items: center;
 }
 @media screen and (min-width: 1200px) {
-  .contacts {
+  .header .contacts {
     display: flex;
     gap: 30px;
   }
 }
-
-.contacts__item--style {
+.header .contacts__item--style {
   color: var(--secondary-text-color);
   text-decoration: none;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition-property: color;
   transition-duration: var(--main-trans-duration);
   transition-timing-function: var(--cubic);
 }
-.contacts__item--style:hover, .contacts__item--style:focus {
+.header:hover, .header:focus {
   color: var(--accent-color);
 }
-.contacts__item--style .contacts__item--icon {
+.header .contacts__item--icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -420,11 +416,6 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.benefits {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
 .benefits__list {
   display: flex;
   flex-wrap: wrap;
@@ -468,13 +459,17 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
 }
+@media screen and (min-width: 767.98px) {
+  .benefits__item--title {
+    text-align: left;
+  }
+}
 
 .benefits__item--txt {
   color: var(--secondary-text-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin-bottom: 30px;
 }
 
 .job {
@@ -530,16 +525,9 @@ body {
 
 .team {
   background-color: var(--third-background-color);
-  padding-bottom: 60px;
-}
-@media screen and (min-width: 1198.98px) {
-  .team {
-    padding-bottom: 94px;
-  }
 }
 
 .team__title {
-  padding-top: 60px;
   margin-bottom: 30px;
   font-style: normal;
   font-weight: 700;
@@ -628,7 +616,6 @@ body {
 }
 
 .clients__title {
-  padding-top: 60px;
   margin-bottom: 50px;
   font-style: normal;
   font-weight: 700;
@@ -651,7 +638,6 @@ body {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 60px;
 }
 
 .clients__item--link {
@@ -851,7 +837,6 @@ body {
 .buttons-list {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 60px;
 }
 @media screen and (min-width: 767.98px) {
   .buttons-list {
@@ -899,12 +884,6 @@ body {
   gap: 30px;
   justify-content: center;
   margin-top: 40px;
-  padding-bottom: 60px;
-}
-@media screen and (min-width: 1200px) {
-  .exp-list {
-    padding-bottom: 94px;
-  }
 }
 
 .exp-name {
