--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,24 +1,8 @@
-.benefits {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    // display: flex;
-        // flex-wrap: wrap;
-        // gap: 30px;
-        // justify-content: center;
-        // margin-left: auto;
-        // margin-right: auto;
-    // &__list {
-    //     display: flex;
-    //     }
-}
-
 .benefits__list{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
-    // margin-left: auto;
-    // margin-right: auto;
 }
 
 .benefits__item {
@@ -42,13 +26,6 @@
     background-color: var(--third-background-color);
     margin-bottom: 30px;
     border-radius: 4px;
-    // @media screen and(min-width: $tablet){
-    //     width: 354px; 
-    // }
-
-    // @media screen and(min-width:$desktop){
-    //     width: 270px;
-    // }
 }
 
 .benefits__item--title {
@@ -59,6 +36,9 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    @media screen and(min-width: $tablet) {
+        text-align: left;
+    }
 }
 
 .benefits__item--txt {
@@ -66,5 +46,4 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
 }
