--- a/sass/utils/_base-styles.scss
+++ b/sass/utils/_base-styles.scss
@@ -21,7 +21,11 @@ body {
     }
 }
 
-// .section {
-//     // padding-top: 94px;
-//     // padding-bottom: 94px;
-// }
+.section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        @media screen and(min-width: $desktop) {
+          padding-top: 94px;
+          padding-bottom: 94px; 
+        }    
+}
