--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -70,10 +70,6 @@
         }
 }
 
-// .footer-links {
-//     // margin-left: 70px;
-// }
-
 .join {
     font-weight: 700;
     font-size: 14px;
@@ -113,9 +109,8 @@
 }
 
 .subscribe {
-    // margin-left: 93px;
     &-input {
-            width: 358px;
+            max-width: 358px;
             height: 50px;
             border: 1px solid rgba(255, 255, 255, 0.3);
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -124,10 +119,6 @@
             color: var(--white-text-color);
             background-color: var(--secondary-background-color);
         }
-        // @media screen and (min-width: 1200px){
-        //     display: flex;
-            
-        // }
 }
 
 .mail-btn {
