--- a/css/main.css
+++ b/css/main.css
@@ -339,13 +339,15 @@ body {
 }
 
 .contacts {
-  display: block;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 @media screen and (min-width: 1200px) {
   .contacts {
     margin-left: 312px;
     display: flex;
+    flex-direction: row;
     gap: 30px;
   }
 }
@@ -716,6 +718,7 @@ body {
     flex-wrap: wrap;
     gap: 60px;
     justify-content: space-around;
+    align-items: baseline;
   }
 }
 @media screen and (min-width: 1198.98px) {
@@ -816,8 +819,17 @@ body {
   background-color: var(--accent-color);
 }
 
+@media screen and (mim-width: 767.98px) {
+  .subscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 .subscribe-input {
-  max-width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -825,6 +837,16 @@ body {
   padding-left: 16px;
   color: var(--white-text-color);
   background-color: var(--secondary-background-color);
+}
+@media screen and (min-width: 767.98px) {
+  .subscribe-input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1198.98px) {
+  .subscribe-input {
+    width: 358px;
+  }
 }
 
 @media screen and (min-width: 1198.98px) {
@@ -836,7 +858,9 @@ body {
 
 .btn-subscribe {
   margin-top: 20px;
-  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
   align-items: center;
   justify-content: center;
   font-weight: 700;
