--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,10 +14,10 @@
         flex-wrap: wrap;
         gap: 60px;
         justify-content: space-around;
+        align-items: baseline;
     }
     @media screen and(min-width: $desktop) {
         align-items: baseline;
-        
     }
 }
 
@@ -109,8 +109,18 @@
 }
 
 .subscribe {
-    &-input {
-            max-width: 358px;
+    @media  screen and(mim-width: $tablet) {
+        display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+    }
+}
+
+
+
+.subscribe-input {
+            width: 100%;
             height: 50px;
             border: 1px solid rgba(255, 255, 255, 0.3);
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -118,21 +128,26 @@
             padding-left: 16px;
             color: var(--white-text-color);
             background-color: var(--secondary-background-color);
+            @media screen and(min-width: $tablet){
+                width: 450px;  
+            }
+            @media screen and(min-width: $desktop){
+                width: 358px;
+            }
         }
-}
 
 .mail-btn {
     @media screen and (min-width: $desktop ){
         display: flex;
         gap: 12px;
-
-        
     }
 }
 
 .btn-subscribe {
     margin-top: 20px;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 700;
