--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ body {
 .hero {
   background-color: var(--secondary-background-color);
   max-width: 100%;
-  height: 400px;
+  height: 100%;
   padding: 118px 60px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -940,6 +940,16 @@ body {
   gap: 30px;
   margin-top: 40px;
 }
+@media screen and (min-width: 767.98px) {
+  .exp-list .exp-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1198.98px) {
+  .exp-list .exp-item {
+    width: 370px;
+  }
+}
 
 .exp-name {
   font-style: normal;
@@ -973,16 +983,6 @@ body {
 .exp-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
-}
-@media screen and (min-width: 767.98px) {
-  .exp-item {
-    width: 354px;
-  }
-}
-@media screen and (min-width: 1198.98px) {
-  .exp-item {
-    width: 370px;
-  }
 }
 
 .exp-card {
