--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     background-color: var(--secondary-background-color);
     max-width: 100%;
-    height: 400px;
+    height: 100%;
     padding: 118px 60px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,7 +16,6 @@
     @media screen and(min-width: 1200px) {
         padding: 200px 0;
         height: 600px;
-        
     }
     }
     
