--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -260,3 +260,10 @@
         & .contacts__item--icon {
             fill: currentColor;
             margin-right: 10px;}}
+
+.contacts__item--style {
+    @media screen and(min-width: $desktop){
+        font-size: 14px;
+        line-height: 1.14;
+    }
+}
