--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,6 +4,7 @@
     height: 100%;
     padding: 118px 60px;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob-x1.jpg");
     @media screen and(min-width: 481px){
